Implement simulation handler
